deploy/bases/rails/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: report-viewer
  name: report-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-viewer
  strategy: {}
  template:
    metadata:
      labels:
        app: report-viewer
    spec:
      serviceAccountName: "link-checker"
      containers:
      - image: ghcr.io/kingdonb/link-checker:canary
        name: reportview
        command: ["bundle"]
        args: ["exec", "rails", "server", "-b", "0.0.0.0"]
        securityContext:
          allowPrivilegeEscalation: false
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
