deploy/bases/rails/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: report-viewer
  name: report-viewer
spec:
  type: ClusterIP
  selector:
    app: report-viewer
  ports:
  - name: http
    port: 80
    targetPort: 3000
